--- a/css/style.css
+++ b/css/style.css
@@ -4,8 +4,19 @@ body, h1,h2,h3,h4,h5,h6,ul,li,ol,p{
     font-size: 16px;
 }
 
+html{
+    box-sizing: border-box;
+}
+
+*,*:before,*:after{
+    box-sizing:inherit;
+}
+
 body{
     font-family: 'Oswald', sans-serif;
+    color:#fff;
+    font-weight: 400;
+    line-height: 1.5;
 }
 
 .header-1{
@@ -19,10 +30,6 @@ body{
     border-bottom: 2px solid rgba(255,255,255,0.5);
     transition:all ease 1s;
 
-}
-body{
-    height: 2000px;
-    background:#333;
 }
 
 
@@ -113,3 +120,83 @@ body{
     line-height: 0.8;
     color: #fff;
 }
+
+ol,ul {
+    list-style: none;
+}
+
+img{
+    max-width:100%;
+    height: auto;
+}
+
+a{
+    text-decoration: none;
+}
+
+.slideshow-container{
+    max-width: 100%;
+    position: relative;
+    margin: auto;
+    background:url(../img/bg-main.jpg) 0 0 no-repeat;
+    background-size:cover;
+    height: 100vh;
+    overflow: hidden;
+}
+
+.myslides{
+    position: relative;
+    display: none;
+    padding-top: 100px;
+}
+
+.prev, .next{
+    cursor: pointer;
+    position: absolute;
+    top:50%;
+    width: auto;
+    margin-top: -1.5rem;
+    padding: 1rem;
+    color:#fff;
+    font-weight: bold;
+    font-size: 1.2rem;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+    background-color: rgba(0,0,0,0.5);
+    z-index: 999;
+
+}
+
+.next{
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+.prev:hover,
+.next:hover{
+    background-color: rgba(0,0,0,0.9);
+}
+
+.myslides h2{
+    font-size: 10rem;
+    text-transform: uppercase;
+    letter-spacing: 2rem;
+    font-weight: 700;
+    position: absolute;
+    top:80px;
+    left:100px;
+    z-index: 10;
+    animation-duration: 1.2s;
+    animation-fill-mode: both;
+    animation-name: fadeInLeft;
+}
+
+
+
+
+
+
+
+
+
