--- a/css/style.css
+++ b/css/style.css
@@ -252,7 +252,7 @@ a{
     animation-name:fadeInLeft;
 }
 
-.myslides .p_detail 9{
+.myslides .p_detail p{
     font-size: 14px;
     font-weight: 300;
     margin-bottom: 15px;
