--- a/css/style.css
+++ b/css/style.css
@@ -245,7 +245,7 @@ a{
 
 .myslides .p_detail h4{
     font-size: 20px;
-    font-weight: 600;
+    font-weight: 300;
     margin-bottom: 15px;
     animation-duration: 1.2s;
     animation-fill-mode:both;
@@ -255,10 +255,108 @@ a{
 .myslides .p_detail p{
     font-size: 14px;
     font-weight: 300;
+    letter-spacing: 1px;
     margin-bottom: 15px;
     animation-duration: 1.2s;
     animation-fill-mode:both;
     animation-name:slideInRight;
+}
+
+.myslides .p_detail ul{
+    font-size: 14px;
+    font-weight: 300;
+    margin-bottom: 20px;
+    animation-duration: 1.2s;
+    animation-fill-mode:both;
+    animation-name:slideInRight;
+}
+
+.myslides .p_detail ul li {
+    color:#fccb00;
+}
+
+.myslides .p_detail select {
+    display: inline-block;
+    border: 1px solid #fccb00;
+    background: #fccb00;
+    font-size: 14px;
+    font-weight: bold;
+    margin-right: 5px;
+    animation-duration: 1.2s;
+    animation-fill-mode:both;
+    animation-name:fadeInLeft;
+}
+
+.myslides .p_detail a{
+    font-size: 14px;
+    color:white;
+    padding: 6px 20px;
+    display: inline-block;
+    border: 2px solid white;
+    margin-right: 15px;
+    transition: 0.5 background-color;
+    animation-duration: 1.2s;
+    animation-fill-mode:both;
+    animation-name:fadeInUp;
+
+}
+
+.myslides .p_detail span{
+    display: inline-block;
+    animation-duration: 1.2s;
+    animation-fill-mode:both;
+    animation-name:slideInRight;
+
+}
+
+.fadeInLeft{
+    animation-name:fadeInLeft
+}
+
+.fadeInUp{
+    animation-name:fadeInUp
+}
+
+.slideInRight{
+    animation-name:slideInRight
+}
+
+
+@keyframes fadeInUp{
+    from {
+        opacity: 0;
+        transform: translate3d(0, 100%, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes fadeInLeft{
+    from {
+        opacity: 0;
+        transform: translate3d(-100px, 0, 0);
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
+}
+
+@keyframes slideInRight{
+    from {
+       
+        transform: translate3d(100%, 0, 0);
+        visibility: visible;
+    }
+
+    to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+    }
 }
 
 
