--- a/css/style.css
+++ b/css/style.css
@@ -140,8 +140,8 @@ a{
     margin: auto;
     background:url(../img/bg-main.jpg) 0 0 no-repeat;
     background-size:cover;
-    height: 100vh;
-    /* overflow: hidden; */
+    height: 105vh;
+    overflow: hidden; 
 }
 
 /* .myslides{
@@ -182,9 +182,10 @@ a{
     font-size: 10rem;
     text-transform: uppercase;
     letter-spacing: 2rem;
-    font-weight: 700;
+    line-height: 1;
+    font-weight: 800;
     position: absolute;
-    top:80px;
+    top:180px;
     left:100px;
     z-index: 10;
     animation-duration: 1.2s;
@@ -214,6 +215,7 @@ a{
 
 .myslides{
     padding-top: 10vh;
+  
 }
 
 .myslides .p_detail{
@@ -222,9 +224,11 @@ a{
     top: 180px;
     right: 100px;
     z-index: 30;
+    
 }
 
 .myslides .p_detail h3 {
+   
     font-size: 50px;
     font-weight: 600;
     font-style: italic;
